[package]
name = "yeelib_rs"
version = "0.1.0"
authors = ["Yi Feng Yang <yifeng@yfyang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
httparse = "^1.3.4"
anyhow = "^1.0.37"
regex = "^1.4.2"
fastrand = "^1.4.0"
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0.61"