[package]
name = "yeelib_rs"
version = "0.1.0"
authors = ["Yi Feng Yang <yifeng@yfyang.dev>"]
edition = "2018"
description = "Easily find and  interface with Yeelight IoT smart lights"
keywords = ["yeelight", "iot", "light", "ssdp", "lan"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/teppah/yeelib"
repository = "https://github.com/teppah/yeelib"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
httparse = "^1.3.4"
regex = "^1.4.2"
fastrand = "^1.4.0"
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0.61"

[dev-dependencies]
anyhow = "^1.0.37"
